fixed first button spacing

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ height: 30px;
 width: 100px;
 border: 1px #3882f6;
 border-radius: 10px;
+margin-top: 10px;
 }
 
 
